# CMakeLists_Library_Parser

./: CMakeLists.txt  README.md
include/: FileReader.h  Library.h  LibraryList.h  LibraryParser.h  StrUtils.h
src/: FileReader.cpp  Library.cpp  LibraryList.cpp  LibraryParser.cpp  StrUtils.cpp  main.cpp
tests/: test_FileReader.cpp  test_Library.cpp  test_LibraryList.cpp  test_LibraryParser.cpp  test_StrUtils.cpp
